api_versioned_docs/version-12.1.0/avalonia/controls/converters/index.mdx
---
title: 'Avalonia.Controls.Converters'
hide_title: true
slug: '/avalonia/controls/converters'
uid: 'Avalonia.Controls.Converters'
commentId: 'N:Avalonia.Controls.Converters'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Converters'
tfms:
  - 'net10.0'
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Converters Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls.Converters`

</div>

## Types

- [BorderGapMaskConverter](bordergapmaskconverter.mdx) - Converter that generates the visual brush for [Avalonia.Controls.GroupBox](xref:Avalonia.Controls.GroupBox)
- [ColorToDisplayNameConverter](colortodisplaynameconverter.mdx) - Gets the approximated display name for the color.
- [ColorToHexConverter](colortohexconverter.mdx) - Converts a color to a hex string and vice versa.
- [CornerRadiusFilterConverter](cornerradiusfilterconverter.mdx) - Converts an existing [CornerRadius](xref:Avalonia.CornerRadius) struct to a new [CornerRadius](xref:Avalonia.CornerRadius) struct,
with filters applied to extract only the specified corners, leaving the others set to 0.
- [CornerRadiusToDoubleConverter](cornerradiustodoubleconverter.mdx) - Converts one corner of a [Avalonia.CornerRadius](xref:Avalonia.CornerRadius) to its double value.
- [Corners](corners.mdx) - Defines constants that specify one or more corners of a [Avalonia.CornerRadius](xref:Avalonia.CornerRadius).
- [DoNothingForNullConverter](donothingfornullconverter.mdx) - Converter that will do nothing (not update bound values) when a null value is encountered.
This converter enables binding nullable with non-nullable properties in some scenarios.
- [EnumToBoolConverter](enumtoboolconverter.mdx) - Converter to convert an enum value to bool by comparing to the given parameter.
Both value and parameter must be of the same enum type.
- [IndentConverter](indentconverter.mdx) - Converts an integer indentation level to a [Avalonia.Thickness](xref:Avalonia.Thickness) value for use in
hierarchical data displays.
- [InputMethodsTypeConverter](inputmethodstypeconverter.mdx) - Type converter that converts comma-separated string of input method IDs into a collection of [Avalonia.Controls.VirtualKeyboardInputMethod](xref:Avalonia.Controls.VirtualKeyboardInputMethod) instances.
- [MarginMultiplierConverter](marginmultiplierconverter.mdx)
- [MenuScrollingVisibilityConverter](menuscrollingvisibilityconverter.mdx)
- [PlatformKeyGestureConverter](platformkeygestureconverter.mdx) - Converts a [Avalonia.Input.KeyGesture](xref:Avalonia.Input.KeyGesture) to a string, formatting it according to the current
platform's style guidelines.
- [StringFormatConverter](stringformatconverter.mdx) - Calls [string.Format(string,object\[\])](xref:System.String.Format%28System.String%2CSystem.Object%5B%5D%29) on the passed in values, where the first element in the list
is the string, and everything after it is passed into the object array in order.
- [ToBrushConverter](tobrushconverter.mdx) - Converts the given value into an [Avalonia.Media.IBrush](xref:Avalonia.Media.IBrush) when a conversion is possible.
- [ToColorConverter](tocolorconverter.mdx) - Converts the given value into a [Avalonia.Media.Color](xref:Avalonia.Media.Color) when a conversion is possible.
- [TreeViewItemIndentConverter](treeviewitemindentconverter.mdx)
</ApiRefPage>

